--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@ attestazione.exe
 init.rb
 *.txt
 *.sql
-paperclip.*
+/paperclip.*
+/log/paperclip.log
 paperclip_server.*
 paperclip2.*
 paperclip2_server.*
