split fatturazione bilancio

--- a/conf/paperclip.yml
+++ b/conf/paperclip.yml
@@ -37,7 +37,7 @@
     :set_default: !ruby/object:Configatron::Store
       __locked: false
       attributes: {}
-    :attivo: false
+    :attivo: true
 :liquidazioni: !ruby/object:Configatron::Store
   __locked: false
   attributes:
@@ -56,3 +56,6 @@
         :to_ary: !ruby/object:Configatron::Store
           __locked: false
           attributes: {}
+:bilancio_attivo: !ruby/object:Configatron::Store
+  __locked: false
+  attributes: {}
