--- a/conf/paperclip.yml
+++ b/conf/paperclip.yml
@@ -37,16 +37,14 @@
     :set_default: !ruby/object:Configatron::Store
       __locked: false
       attributes: {}
-    :attivo: true
+    :attivo: false
 :liquidazioni: !ruby/object:Configatron::Store
   __locked: false
   attributes:
     :set_default: !ruby/object:Configatron::Store
       __locked: false
       attributes: {}
-    :attivo: !ruby/object:Configatron::Store
-      __locked: false
-      attributes: {}
+    :attivo: false
 :corrispettivi: !ruby/object:Configatron::Store
   __locked: false
   attributes:
@@ -56,8 +54,3 @@
         :to_ary: !ruby/object:Configatron::Store
           __locked: false
           attributes: {}
-    :default_pdc_dare: 43
-    :default_pdc_avere: 81
-:bilancio_attivo: !ruby/object:Configatron::Store
-  __locked: false
-  attributes: {}
